# architect-sdk

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
_examples/: orderflow_monitoring.rs  subscribe_candles.rs  subscribe_l1_book_snapshots.rs  subscribe_l2_book.rs  use_managed_marketdata.rs
examples/: Cargo.toml  subscribe_candles.rs  subscribe_l1_book_snapshots.rs  subscribe_l2_book.rs  subscribe_trades.rs
graphql/: create_jwt.graphql  schema.graphql
src/: account_manager.rs  account_master.rs  admin_stats.rs  ca.crt  channel_driver.rs  client.rs  common.rs  component_driver.rs  db.rs  discrete_clock.rs  driver.rs  external_driver.rs  graphql.rs  grpc.rs  lib.rs  oms.rs  order_id_allocator.rs  orderflow.rs  paths.rs  synced.rs  tls.rs
src/marketdata/: book_client.rs  external_client.rs  grpc_client.rs  historical_candles.rs  l2_client.rs  level_book.rs  managed_l1_streams.rs  managed_l2_clients.rs  managed_marketdata.rs  mod.rs  netidx_feed_client.rs  published_book.rs  rfq_client.rs  snapshots.rs  synthetic_candles.rs  utils.rs
src/marketdata/book_client/: book_client.rs  consolidated_book_client.rs  consolidated_level_book.rs  level_book.rs  mod.rs
src/orderflow/: client.rs  mod.rs  oms.rs  order_id_allocator.rs
src/qf/: book_client.rs  consolidated_level_book.rs  level_book.rs  published_book.rs
src/symbology/: allocator.rs  client.rs  cpty.rs  downloader.rs  external_client.rs  hcstatic.rs  index.rs  market.rs  mod.rs  parsers.rs  product.rs  route.rs  static_ref.rs  store.rs  txn.rs  uploader.rs  util.rs  venue.rs
src/symbology_v2/: client.rs  store.rs  uploader.rs
tests/: connect_test.rs  orderflow_test.rs  symbology_test.rs
tests/common/: mod.rs
