[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["finance", "cryptography::cryptocurrencies"]
description = "Architect.xyz Trading Platform SDK"
documentation = "https://docs.rs/architect-sdk"
edition = "2021"
homepage = "https://www.architect.xyz"
keywords = ["crypto", "hft", "trading", "finance"]
license = "AGPL-3.0-only"
name = "architect-sdk"
version = "7.17.21"

# [[example]]
# name = "subscribe_candles"

# [[example]]
# name = "subscribe_l1_book_snapshots"

# [[example]]
# name = "subscribe_l2_book"

# [[example]]
# name = "subscribe_trades"

# [[example]]
# name = "use_managed_marketdata"

[features]
all = ["graphql", "grpc"]
default = ["grpc"]
graphql = ["graphql_client", "reqwest"]
grpc = ["api/grpc", "graphql", "hickory-resolver", "tonic"]

[dependencies]
anyhow = { workspace = true }
# CR alee: rename this to architect-api for examples friendliness?
api = { package = "architect-api", version = "7.17.21", path = "../api" }
arc-swap = { workspace = true }
arcstr = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
# env_logger = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
graphql_client = { workspace = true, optional = true }
hickory-resolver = { workspace = true, optional = true }
itertools = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, optional = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }

# [dev-dependencies]
# env_logger = { workspace = true }
# inquire = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    "once_cell", # api::pool
]
