[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["finance", "cryptography::cryptocurrencies"]
description = "Architect.xyz Trading Platform SDK"
documentation = "https://docs.rs/architect-sdk"
edition = "2021"
homepage = "https://www.architect.xyz"
keywords = ["crypto", "hft", "trading", "finance"]
license = "AGPL-3.0-only"
name = "architect-sdk"
version = "10.33.2"

# [[example]]
# name = "subscribe_candles"

# [[example]]
# name = "subscribe_l1_book_snapshots"

# [[example]]
# name = "subscribe_l2_book"

# [[example]]
# name = "subscribe_trades"

# [[example]]
# name = "use_managed_marketdata"

[features]
all = ["grpc"]
default = ["grpc", "grpc-tls"]
grpc = ["architect-api/grpc", "hickory-resolver", "tonic"]
grpc-tls = ["tonic/tls-aws-lc", "tonic/tls-native-roots"]
# enable this feature to access sdk::load_config
yaml = ["serde_yaml"]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
architect-api = { package = "architect-api", version = "10.33.2", path = "../api" }
arcstr = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
# env_logger = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
hickory-resolver = { workspace = true, optional = true }
itertools = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }

# [dev-dependencies]
# env_logger = { workspace = true }
# inquire = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    "once_cell", # api::pool
]
